# Brouton_lab_test_task

./: .gitignore  docker-compose.yml
backend/: app.env  dockerfile  init_db.py  main.py  pyproject.toml  test_connection.py  yandex_s3_connection_test.py
backend/api/: notes.py  readme.txt  websockets.py
backend/audio_notes_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/core/: config.py  database.py  readme.txt  s3_client.py
backend/db_layer/: note_db_interaction.py
backend/models/: audio_file.py  base_model.py  note.py  processing.py  readme.txt
backend/schemas/: note.py  readme.txt
backend/services/: audio_service.py  note_service.py  queue_service.py  readme.txt  upload_service.py
frontend/: dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/AudioRecorder/: AudioRecorder.tsx
frontend/src/components/DetailsDropdown/: DetailsDropdown.tsx
frontend/src/components/EditNoteModal/: EditNoteModal.tsx
frontend/src/components/NotesTable/: NotesTable.tsx
frontend/src/hooks/: useAudioRecorder.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/services/: api.ts  websocketService.ts
frontend/src/types/: note.ts
