[project]
name = "audio-notes-backend"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "alembic==1.12.1",
    "python-multipart==0.0.6",
    "websockets==12.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "aiofiles==23.2.1"
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"